--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.js"></script> -->
-</head>
-<body>
-	<p>hi</p>
-</body>
+    <head>
+        <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon.png">
+        <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.js"></script>
+        <script src="index.js"></script>
+    </head>
 </html>
