--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.js"></script>
         <script src="index.js"></script>
     </head>
+    <body>
+        <p id="you-lose" style="visibility: hidden">You lose. Refresh the page to try again.</p>
+    </body>
 </html>
